[package]
name = "book-quotes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {version = "0"}
tokio = {version = "1.0", features = ["full"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
sqlx = {version = "0.7", features = ["uuid", "chrono", "runtime-tokio", "postgres", "tls-rustls"]}
uuid = {version = "1.0", features = ["v4", "serde"]}
chrono = {version = "0.4", features = ["serde"]}
dotenv = "0.15.0"
tower = "0.4.13"
tower-http = "0.5.2"
